--- a/css/theme/eci2019.css
+++ b/css/theme/eci2019.css
@@ -1,7 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=Homemade+Apple);
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,300,600);
-@import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,700);
-@import url(http://fonts.googleapis.com/css?family=Shadows+Into+Light);
+@import url(https://fonts.googleapis.com/css?family=Homemade+Apple);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,600);
+@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700);
+@import url(https://fonts.googleapis.com/css?family=Shadows+Into+Light);
 /**
  * Agus Montero's ECI 2019 Theme, based on Christine's Pydata 2015 theme for reveal.js.
  * https://github.com/chdoig/pytexas2015-topic-modeling/blob/master/css/theme/pydata.css
