--- a/lib/css/monokai.css
+++ b/lib/css/monokai.css
@@ -49,7 +49,7 @@ Monokai style - ported by Luigi Maselli - http://grigio.org
 .hljs-variable,
 .hljs-template-tag,
 .hljs-template-variable {
-  color: #a6e22e;
+  color: #2216cf;
 }
 
 .hljs-comment,
